Update infrastructure